--- a/GBEmu/GBEmu.csproj
+++ b/GBEmu/GBEmu.csproj
@@ -22,7 +22,6 @@
     <UseSGen>false</UseSGen>
     <IncludeMonoRuntime>false</IncludeMonoRuntime>
     <EnablePackageSigning>false</EnablePackageSigning>
-    <CodeSigningKey>Mac Developer</CodeSigningKey>
     <EnableCodeSigning>false</EnableCodeSigning>
     <CreatePackage>false</CreatePackage>
   </PropertyGroup>
@@ -67,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Emulation\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.cs" />
