aktueller Stand LD implementation

--- a/GBEmu/GBEmu.csproj
+++ b/GBEmu/GBEmu.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>GBEmu</RootNamespace>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <AssemblyName>GBEmu</AssemblyName>
+    <SuppressXamMacUpsell>True</SuppressXamMacUpsell>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
