--- a/GBEmu/GBEmu.Emulation/GBEmu.Emulation.csproj
+++ b/GBEmu/GBEmu.Emulation/GBEmu.Emulation.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Instructions\LD8.cs" />
     <Compile Include="Instructions\InstructionParseResult.cs" />
     <Compile Include="Instructions\LD16.cs" />
+    <Compile Include="Operation.cs" />
+    <Compile Include="Flags.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
