moved emulator to cpu, added table for registers

--- a/GBEmu/GBEmu.Emulation/GBEmu.Emulation.csproj
+++ b/GBEmu/GBEmu.Emulation/GBEmu.Emulation.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Instructions\Calls.cs" />
     <Compile Include="Instructions\Restarts.cs" />
     <Compile Include="Instructions\Returns.cs" />
+    <Compile Include="Mode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
